# ErisPulse-KookAdapter

./: .gitignore  CoverToOnebot12.md  LICENSE  README.md  platform-features.md  pyproject.toml
ErisPulse_KookAdapter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Kook/: CallApi.py  Converter.py  Core.py  __init__.py
test/: test.py
