[project]
name = "ErisPulse-KookAdapter"
version = "0.1.0"
description = "ErisPulse Kook Adapter - Kook平台适配器"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "ShanFish", email = "shanfishdev@qq.com"}
]
requires-python = ">=3.8"
dependencies = [
    "ErisPulse",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
]

[project.entry-points."erispulse.adapter"]
"kook" = "Kook:KookAdapter"